@@ -7,11 +7,13 @@ OpenLDAP 2.3.13 Engineering
 	Fixed slapd sizelimit disclose issue (ITS#4213)
 	Fixed slapd gentlehup write restrict issue (ITS#3717)
 	Fixed slapd gentlehup abnormal issue (ITS#4217)
+	Fixed slapd delta-sync subtree scope issue (ITS#4227)
 	Fixed slapd cn=config OID/name pollution issue (ITS#4185)
 	Fixed slapd cn=config rootdn issue (ITS#4192)
 	Fixed slapd cn=config slaptest -F without -f issue (ITS#4194)
 	Fixed slapd cn=config ACL issue (ITS#4218)
 	Fixed slapd-bdb negative results IDL cache issue (ITS#4223)
+	Fixed slapd-bdb cursor close issue (ITS#4226)
 	Fixed slapd-hdb slapadd -q issue (ITS#4210)
 	Fixed slapd-hdb missing results issue (ITS#4186)
 	Fixed slapd-ldap potential double free issue (ITS#4189)
